--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -624,7 +624,7 @@ input:focus {
 }
 .reg {
   float: left;
-  width: 20%;
+  width: 42%;
   margin: 5px 0;
 }
 /* create_btn */
@@ -633,7 +633,7 @@ input:focus {
   width: 21%;
 }
 .create_btn a {
-  text-transform: capitalize;
+  text-transform: uppercase;
   display: inline-block;
   padding: 6px 16px;
   font-size: 0.8725em;
