--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -13,8 +13,8 @@
 
         <link href="{% static 'css/bootstrap.css' %}" rel='stylesheet' type='text/css' />
         <link href="{% static 'css/style.css' %}" rel='stylesheet' type='text/css' />
-        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900' rel='stylesheet' type='text/css'>
         <link href="{% static 'css/megamenu.css' %}" rel="stylesheet" type="text/css" media="all" />
     </head>
     <body>
