--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load core.tags %}
 
 <!DOCTYPE HTML>
 <html>
@@ -12,10 +13,13 @@
         <meta name="keywords" content="" />
 
         <link href="{% static 'css/bootstrap.css' %}" rel='stylesheet' type='text/css' />
+        <link href="{% static 'css/jquery-ui.min.css' %}" rel='stylesheet' type='text/css' />
         <link href="{% static 'css/style.css' %}" rel='stylesheet' type='text/css' />
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900' rel='stylesheet' type='text/css'>
         <link href="{% static 'css/megamenu.css' %}" rel="stylesheet" type="text/css" media="all" />
+
+        {% edit 'enable' %}
     </head>
     <body>
         <div class="top_bg">
@@ -29,7 +33,7 @@
                         </ul>
                     </div>
                     <div class="top_left">
-                        <h2><span></span>Телефон: 8(800)555-35-35</h2>
+                        <h2><span></span>Телефон: {% component 'text.html' id='phone' %}</h2>
                     </div>
                         <div class="clearfix"> </div>
                 </div>
@@ -43,9 +47,11 @@
         {% include 'footer.html' %}
 
         <script type='text/javascript' src="{% static 'js/jquery-1.11.1.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/megamenu.js' %}"></script>
         <script>$(document).ready(function(){$(".megamenu").megamenu();});</script>
         <script src="{% static 'js/menu_jquery.js' %}"></script>
         <script src="{% static 'js/simpleCart.min.js' %}"> </script>
+        <script type="text/javascript" src="{% static 'js/edit.js' %}"></script>
     </body>
 </html>
