--- a/frontend/templates/test.html
+++ b/frontend/templates/test.html
@@ -1,10 +1,18 @@
+{% load staticfiles %}
+{% load core.tags %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
+    {% edit 'enable' %}
+    <link href="{% static 'css/jquery-ui.min.css' %}" rel='stylesheet' type='text/css' />
 </head>
 <body>
-<h1>Test</h1>
+    <h1>{% component 'test.html' id='test' %}</h1>
+    <script type="text/javascript" src="{% static 'js/jquery-1.11.1.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/edit.js' %}"></script>
 </body>
 </html>
