--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -18,8 +18,6 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900' rel='stylesheet' type='text/css'>
         <link href="{% static 'css/megamenu.css' %}" rel="stylesheet" type="text/css" media="all" />
-
-        {% edit 'enable' %}
     </head>
     <body>
         <div class="top_bg">
@@ -42,6 +40,8 @@
 
         {% include 'header.html' %}
 
+        {% include 'messages.html' %}
+
         {% block content %}{% endblock content %}
 
         {% include 'footer.html' %}
@@ -52,6 +52,8 @@
         <script>$(document).ready(function(){$(".megamenu").megamenu();});</script>
         <script src="{% static 'js/menu_jquery.js' %}"></script>
         <script src="{% static 'js/simpleCart.min.js' %}"> </script>
-        <script type="text/javascript" src="{% static 'js/edit.js' %}"></script>
+
+        {% include 'core/edit.html' %}
+
     </body>
 </html>
