--- a/frontend/templates/core/component.html
+++ b/frontend/templates/core/component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="container">
         <h3>Edit component "{{ component.name }}"</h3>
-        <form action="." method="post">
+        <form action="." enctype="multipart/form-data" method="post">
             {% crispy form form.helper %}
         </form>
     </div>
