--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -6,113 +6,20 @@
     <div class="arriv">
         <div class="container">
             <div class="arriv-top">
-                <div class="col-md-6 arriv-left">
-                    <img src="{% static 'images/1.jpg' %}" class="img-responsive" alt="">
-                    <div class="arriv-info">
-                        <h3>NEW ARRIVALS</h3>
-                        <p>REVIVE YOUR WARDROBE WITH CHIC KNITS</p>
-                        <div class="crt-btn">
-                            <a href="#">TAKE A LOOK</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 arriv-right">
-                    <img src="{% static 'images/2.jpg' %}" class="img-responsive" alt="">
-                    <div class="arriv-info">
-                        <h3>TUXEDO</h3>
-                        <p>REVIVE YOUR WARDROBE WITH CHIC KNITS</p>
-                        <div class="crt-btn">
-                            <a href="#">SHOP NOW</a>
-                        </div>
-                    </div>
-                </div>
+                {% component 'tile.html' id='tile-a' outer_class='arriv-left' inner_class='arriv-info' %}
+                {% component 'tile.html' id='tile-b' outer_class='arriv-right' inner_class='arriv-info' %}
                 <div class="clearfix"></div>
             </div>
             <div class="arriv-bottm">
-{#                <div class="col-md-8 arriv-left1">#}
-{#                    <img src="{% static 'images/3.jpg' %}" class="img-responsive" alt="">#}
-{#                    <div class="arriv-info1">#}
-{#                        <h3>SWEATER</h3>#}
-{#                        <p>REVIVE YOUR WARDROBE WITH CHIC KNITS</p>#}
-{#                        <div class="crt-btn">#}
-{#                            <a href="#">SHOP NOW</a>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-                {% component 'tile.html' id='tile-a' %}
-                <div class="col-md-4 arriv-right1">
-                    <img src="{% static 'images/4.jpg' %}" class="img-responsive" alt="">
-                    <div class="arriv-info2">
-                        <a href="#"><h3>Trekking Shoes<i class="ars"></i></h3></a>
-                    </div>
-                </div>
+                {% component 'tile.html' id='tile-c' outer_class='arriv-left1' inner_class='arriv-info1' %}
+                {% component 'tile.html' id='tile-d' outer_class='arriv-right1' inner_class='arriv-info2' %}
                 <div class="clearfix"></div>
             </div>
             <div class="arriv-las">
-                <div class="col-md-4 arriv-left2">
-                    <img src="{% static 'images/5.jpg' %}" class="img-responsive" alt="">
-                    <div class="arriv-info2">
-                        <a href="#"><h3>Casual Glasses<i class="ars"></i></h3></a>
-                    </div>
-                </div>
-                <div class="col-md-4 arriv-middle">
-                    <img src="{% static 'images/6.jpg' %}" class="img-responsive" alt="">
-                    <div class="arriv-info3">
-                        <h3>FRESH LOOK T-SHIRT</h3>
-                        <div class="crt-btn">
-                            <a href="#">SHOP NOW</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 arriv-right2">
-                    <img src="{% static 'images/7.jpg' %}" class="img-responsive" alt="">
-                    <div class="arriv-info2">
-                        <a href="#"><h3>Elegant Watches<i class="ars"></i></h3></a>
-                    </div>
-                </div>
+                {% component 'tile.html' id='tile-e' outer_class='arriv-left2' inner_class='arriv-info2' %}
+                {% component 'tile.html' id='tile-f' outer_class='arriv-middle' inner_class='arriv-info3' %}
+                {% component 'tile.html' id='tile-g' outer_class='arriv-right2' inner_class='arriv-info2' %}
                 <div class="clearfix"></div>
-            </div>
-        </div>
-    </div>
-    <div class="special">
-        <div class="container">
-            <h3>Special Offers</h3>
-            <div class="specia-top">
-                <ul class="grid_2">
-                    <li>
-                        <a href="#"><img src="{% static 'images/8.jpg' %}" class="img-responsive" alt=""></a>
-                        <div class="special-info grid_1 simpleCart_shelfItem">
-                            <h5>Lorem ipsum dolor</h5>
-                            <div class="item_add"><span class="item_price"><h6>ONLY $40.00</h6></span></div>
-                            <div class="item_add"><span class="item_price"><a href="#">add to cart</a></span></div>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="#"><img src="{% static 'images/9.jpg' %}" class="img-responsive" alt=""></a>
-                        <div class="special-info grid_1 simpleCart_shelfItem">
-                            <h5>Consectetur adipis</h5>
-                            <div class="item_add"><span class="item_price"><h6>ONLY $60.00</h6></span></div>
-                            <div class="item_add"><span class="item_price"><a href="#">add to cart</a></span></div>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="#"><img src="{% static 'images/10.jpg' %}" class="img-responsive" alt=""></a>
-                        <div class="special-info grid_1 simpleCart_shelfItem">
-                            <h5>Commodo consequat</h5>
-                            <div class="item_add"><span class="item_price"><h6>ONLY $14.00</h6></span></div>
-                            <div class="item_add"><span class="item_price"><a href="#">add to cart</a></span></div>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="#"><img src="{% static 'images/11.jpg' %}" class="img-responsive" alt=""></a>
-                        <div class="special-info grid_1 simpleCart_shelfItem">
-                            <h5>Voluptate velit</h5>
-                            <div class="item_add"><span class="item_price"><h6>ONLY $37.00</h6></span></div>
-                            <div class="item_add"><span class="item_price"><a href="#">add to cart</a></span></div>
-                        </div>
-                    </li>
-                    <div class="clearfix"></div>
-                </ul>
             </div>
         </div>
     </div>
