--- a/frontend/templates/components/text.html
+++ b/frontend/templates/components/text.html
@@ -1,2 +1,5 @@
 {% load core.tags %}
-{% attribute 'Text' type='text' id='text' %}
+
+<div style="position: relative; display: unset;">
+    {% attribute 'Text' type='text' id='text' default='Sample Text' %}
+</div>
