footer fix -- follows

--- a/frontend/templates/footer.html
+++ b/frontend/templates/footer.html
@@ -3,7 +3,7 @@
         <div class="col-md-6 s-c">
             <li>
                 <div class="fooll">
-                    <h5>follow us on</h5>
+                    <h5>Подпишись:</h5>
                 </div>
             </li>
             <li>
