--- a/frontend/templates/core/messages.html
+++ b/frontend/templates/core/messages.html
@@ -1,10 +1,10 @@
 {% if messages %}
     <div class="container messages">
         {% for message in messages %}
-            <div class="alert {{ message.tags }} alert-dismissible" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <div class="alert {{ message.tags }}" role="alert">
+                <a href="#" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
-                </button>
+                </a>
                 {{ message }}
             </div>
         {% endfor %}
