--- a/frontend/static/css/megamenu.css
+++ b/frontend/static/css/megamenu.css
@@ -84,6 +84,9 @@ skyblue .megapanel img:hover,.skyblue form.contact input[type="text"]:focus,.sky
 	}
 }
 /* start megamenu colors */
+.skyblue li a:hover {
+	color: #FFFFFF;
+}
 .skyblue li a.color1:hover{
 	background:#EF5F21;
 	color: #ffffff;
