--- a/frontend/templates/core/edit.html
+++ b/frontend/templates/core/edit.html
@@ -35,12 +35,8 @@
             z-index: 999;
         }
 
-        [data-component] {
+        [data-component], [data-component] * {
             cursor: pointer;
-            display: unset;
-        }
-
-        [data-component] * {
             z-index: 9999;
         }
     </style>
@@ -54,7 +50,10 @@
             });
             if (!window.edit_mode) return;
             $('#edit-overlay').show();
-            $('[data-component]')
+            $('[data-component]').each(function () {
+                $(this).children()
+                .unwrap()
+                .attr('data-component', $(this).attr('data-component'))
                 .attr('title', 'Click to edit')
                 .tooltip({track: true})
                 .click(function (e) {
@@ -63,6 +62,7 @@
                     var url = '/edit/' + id;
                     window.open(url, '_blank', 'height=400,width=400');
                 });
+            });
         });
     </script>
 {% endif %}
