--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -17,7 +17,7 @@
                         <div class="cart box_1">
                             <a href="#">
                                 <h3>
-                                    <span class="simpleCart_total">$0.00</span> (<!--
+                                    <span class="simpleCart_total"></span> (<!--
                                     --><span id="simpleCart_quantity" class="simpleCart_quantity">0</span>
                                     товаров)<img src="{% static 'images/bag.png' %}" alt="">
                                 </h3>
