Menu bugfix + fixture update

--- a/frontend/templates/components/menu_section.html
+++ b/frontend/templates/components/menu_section.html
@@ -4,7 +4,7 @@
     <div class="h_nav">
         <h4>{% attribute 'Title' type='text' id='title' default='Section' %}</h4>
         <ul>
-            {% attribute 'Sections' type='list' id='subsections' component='menu_subsection.html' %}
+            {% attribute 'Subsections' type='list' id='subsections' component='menu_subsection.html' %}
         </ul>
     </div>
 </div>
