--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -6,19 +6,19 @@
     <div class="arriv">
         <div class="container">
             <div class="arriv-top">
-                {% component 'tile_a.html' id='tile-a' outer_class='left' width=6 height=400 %}
-                {% component 'tile_a.html' id='tile-b' outer_class='right' width=6 height=400 %}
+                {% component 'tile_a.html' id='tile-a' outer_class='left' width=6 height=400 offset=15 %}
+                {% component 'tile_a.html' id='tile-b' outer_class='right' width=6 height=400 offset=15 %}
                 <div class="clearfix"></div>
             </div>
             <div class="arriv-bottm">
-                {% component 'tile_a.html' id='tile-c' outer_class='left1' inner_class='1' width=8 height=300 %}
-                {% component 'tile_b.html' id='tile-d' outer_class='right1' inner_class='2' width=4 height=300 %}
+                {% component 'tile_a.html' id='tile-c' outer_class='left1' inner_class='1' width=8 height=300 offset=15 %}
+                {% component 'tile_b.html' id='tile-d' outer_class='right1' inner_class='2' width=4 height=300 offset=15 %}
                 <div class="clearfix"></div>
             </div>
             <div class="arriv-las">
-                {% component 'tile_b.html' id='tile-e' outer_class='left2' inner_class='2' width=4 height=300 %}
+                {% component 'tile_b.html' id='tile-e' outer_class='left2' inner_class='2' width=4 height=300 offset=15 %}
                 {% component 'tile_a.html' id='tile-f' outer_class='middle' inner_class='3' width=4 height=300 offset=30 %}
-                {% component 'tile_b.html' id='tile-g' outer_class='right2' inner_class='2' width=4 height=300 %}
+                {% component 'tile_b.html' id='tile-g' outer_class='right2' inner_class='2' width=4 height=300 offset=15 %}
                 <div class="clearfix"></div>
             </div>
         </div>
