--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -474,9 +474,9 @@ span.item_price {
 }
 
 .box_1 {
-    float: left;
+    /*float: right;*/
     margin: 0.55em 0.1em 0;
-    width: 38%;
+    /*width: 38%;*/
 }
 
 .box_1 h3 {
@@ -666,17 +666,26 @@ input:focus {
 
 /*-- header --*/
 .logo {
+    height: 100px;
     float: left;
-    margin: 1.5em 0;
+    /*margin: 1.5em 0;*/
+}
+
+.logo img {
+    max-height: 100%;
 }
 
 .header_right {
+    margin-left: auto;
     float: right;
     width: 40%;
 }
 
 .head-t {
     padding: 1em 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 /*search*/
@@ -965,7 +974,7 @@ ul.icon1 {
 }
 
 ul.megamenu.skyblue {
-    background: #f5f5f5;
+    background: #f3f4f5;
 }
 
 .rgt-bottom {
@@ -1237,9 +1246,15 @@ i.goog:hover {
 }
 
 .foot-top {
+    margin-top: 1.5em;
     padding: 2em 0;
     border-bottom: 1px solid #e5e4e2;
     border-top: 1px solid #e5e4e2;
+}
+
+.stay {
+    display: flex;
+    justify-content: stretch;
 }
 
 .stay form input[type="text"] {
@@ -1271,14 +1286,15 @@ i.goog:hover {
 }
 
 .stay-left {
-    float: left;
-    width: 78%;
+    /*float: left;*/
+    /*width: 78%;*/
+    flex: 1;
     margin-right: 0.5%;
 }
 
 .btn-1 {
-    float: left;
-    width: 21.5%;
+    /*float: left;*/
+    /*width: 21.5%;*/
 }
 
 .footer h4 {
@@ -1289,7 +1305,12 @@ i.goog:hover {
 }
 
 .footer {
+    text-align: center;
     padding: 3em 0;
+}
+
+.footer span {
+    padding: 0 10px;
 }
 
 i.phone {
@@ -1470,7 +1491,7 @@ i.mail {
 }
 
 .footer p a {
-    text-decoration: none;
+    /*text-decoration: none;*/
 }
 
 ul.grid_2 {
@@ -3560,8 +3581,9 @@ p.cart a {
     }
 
     .logo {
-        float: left;
-        margin: 0.9em 0;
+        height: 100px;
+        /*float: left;*/
+        /*margin: 0.9em 0;*/
     }
 
     .arriv h3 {
@@ -3793,7 +3815,8 @@ p.cart a {
     }
 
     .logo {
-        margin: 0;
+        height: 100px;
+        /*margin: 0;*/
     }
 
     .log {
@@ -3935,8 +3958,9 @@ p.cart a {
     }
 
     .logo {
-        float: left;
-        width: 45%;
+        height: 100px;
+        /*float: left;*/
+        /*width: 45%;*/
     }
 
     .create_btn {
@@ -4134,8 +4158,8 @@ p.cart a {
     }
 
     .btn-1 {
-        float: none;
-        width: 40%;
+        /*float: none;*/
+        /*width: 40%;*/
         margin: 0.5em auto 0;
     }
 
