--- a/frontend/templates/footer.html
+++ b/frontend/templates/footer.html
@@ -24,12 +24,12 @@
             <div class="stay">
                 <div class="stay-left">
                     <form>
-                        <input type="text" placeholder="Enter your email to join our newsletter" required="">
+                        <input type="text" placeholder="Оставьте свой email для получения новостей" required="">
                     </form>
                 </div>
                 <div class="btn-1">
                     <form>
-                        <input type="submit" value="join">
+                        <input type="submit" value="отправить">
                     </form>
                 </div>
                 <div class="clearfix"></div>
@@ -41,7 +41,12 @@
 <div class="footer">
     <div class="container">
         <div class="clearfix"></div>
-        <p>Магазин SittingKnitting © 2018 | Разработано <a href="http://jkdev.ru">JK Developers</a> | Дизайн от <a href="http://w3layouts.com/">W3layouts</a>
+        <p>
+            Магазин <a href="https://sittingknitting.ru">SittingKnitting</a> © 2018
+            <span>|</span>
+            Разработано <a href="http://jkdev.ru">JK Developers</a>
+            <span>|</span>
+            Дизайн от <a href="http://w3layouts.com/">W3layouts</a>
         </p>
     </div>
 </div>
