--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -16,13 +16,12 @@
 
                         <div class="cart box_1">
                             <a href="#">
-                                <h3>
+                                <p>
                                     <span class="simpleCart_total"></span> (<!--
-                                    --><span id="simpleCart_quantity" class="simpleCart_quantity">0</span>
-                                    товаров)<img src="{% static 'images/bag.png' %}" alt="">
-                                </h3>
+                                    --><span id="simpleCart_quantity" class="simpleCart_quantity">0</span> товаров)
+                                </p>
+                                <img src="{% static 'images/bag.png' %}" alt="">
                             </a>
-                            <p><a href="javascript:;" class="simpleCart_empty">(корзина пуста)</a></p>
                             <div class="clearfix"></div>
                         </div>
                         <div class="clearfix"></div>
