--- a/frontend/templates/core/edit.html
+++ b/frontend/templates/core/edit.html
@@ -11,12 +11,10 @@
             top: 0;
             left: 50%;
             height: 50px;
-            width: 200px;
-            transform: translate(-100px, 0);
+            width: 300px;
+            transform: translate(-150px, 0);
             z-index: 9999;
 
-            color: white;
-            background: red;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -40,11 +38,11 @@
             z-index: 9999;
         }
     </style>
-    <div id="edit-toolbar">EDIT MODE:&nbsp;&nbsp;<b></b></div>
+    <div id="edit-toolbar" class="btn btn-danger">РЕЖИМ РЕДАКТИРОВАНИЯ:&nbsp;&nbsp;<b></b></div>
     <div id="edit-overlay" style="display: none;"></div>
     <script type="text/javascript">
         $(document).ready(function () {
-            $('#edit-toolbar b').text(window.edit_mode ? 'ON' : 'OFF');
+            $('#edit-toolbar b').text(window.edit_mode ? 'ВКЛ' : 'ВЫКЛ');
             $('#edit-toolbar').click(function () {
                 location = location.pathname + '?edit=' + (!window.edit_mode).toString();
             });
