--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -26,7 +26,7 @@
                                 <div class="clearfix"></div>
                             </div>
                         {% else %}
-                            <a href="{% url 'admin:index' %}" class="btn btn-primary">АДМИНИСТРИРОВАНИЕ</a>
+                            <a href="{% url 'admin:index' %}" class="btn btn-primary btn-sm">DJANGO ADMIN</a>
                         {% endif %}
                         <div class="clearfix"></div>
                     </div>
