--- a/frontend/templates/core/header.html
+++ b/frontend/templates/core/header.html
@@ -12,7 +12,7 @@
                 <div class="header_right">
                     <div class="rgt-bottom">
 
-                        {% include 'auth.html' %}
+                        {% include 'core/auth.html' %}
 
                         {% if not request.user.is_staff %}
                             <div class="cart box_1">
