--- a/frontend/templates/pages/home.html
+++ b/frontend/templates/pages/home.html
@@ -1,6 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'core/base.html' %}
 {% load staticfiles %}
 {% load core.tags %}
+
+{% block title %}Главная{% endblock title %}
 
 {% block content %}
     <div class="arriv">
