--- a/frontend/templates/core/base.html
+++ b/frontend/templates/core/base.html
@@ -7,7 +7,7 @@
         {% include 'core/metrika.html' %}
 
         <meta charset="utf-8">
-        <title>{% block title %}SittingKnitting{% endblock title %}</title>
+        <title>SittingKnitting &ndash; {% block title %}{% endblock title %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="keywords" content="" />
@@ -18,6 +18,7 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900' rel='stylesheet' type='text/css'>
         <link href="{% static 'css/megamenu.css' %}" rel="stylesheet" type="text/css" media="all" />
+        {% block style %}{% endblock %}
     </head>
     <body>
         <div class="top_bg">
@@ -38,13 +39,13 @@
             </div>
         </div>
 
-        {% include 'header.html' %}
+        {% include 'core/header.html' %}
 
         {% include 'core/messages.html' %}
 
         {% block content %}{% endblock content %}
 
-        {% include 'footer.html' %}
+        {% include 'core/footer.html' %}
 
         <script type='text/javascript' src="{% static 'js/jquery-1.11.1.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script>
@@ -53,6 +54,7 @@
         <script>$(document).ready(function(){$(".megamenu").megamenu();});</script>
         <script src="{% static 'js/menu_jquery.js' %}"></script>
         <script src="{% static 'js/simple_cart.min.js' %}"> </script>
+        {% block javascript %}{% endblock %}
 
         {% include 'core/edit.html' %}
 
