--- a/frontend/templates/pages/product.html
+++ b/frontend/templates/pages/product.html
@@ -31,9 +31,9 @@
                     <span class="code">Артикул: {{ product.vendor }}</span>
                     <div class="price">
                         <span class="text">Цена:</span>
-                        <span class="price-new">{{ product.price }} руб.</span><!--
+                        <span class="price-new">{{ product.price }} руб.</span>
                         {% if product.discount %}
-                            --><span class="price-old">{{ product.old_price }} руб.</span>
+                            <span class="price-old">{{ product.old_price }} руб.</span>
                         {% endif %}
                         {#<span class="price-tax">Ex Tax: $90.00</span><br>#}
                         {#<span class="points"><small>Price in reward points: 400</small></span><br>#}
