--- a/frontend/templates/core/footer.html
+++ b/frontend/templates/core/footer.html
@@ -22,16 +22,15 @@
         </div>
         <div class="col-md-6 s-c">
             <div class="stay">
-                <div class="stay-left">
-                    <form>
-                        <input type="text" placeholder="Оставьте свой email для получения новостей" required="">
-                    </form>
-                </div>
-                <div class="btn-1">
-                    <form>
-                        <input type="submit" value="отправить">
-                    </form>
-                </div>
+                <form action="{% url 'subscribe' %}" method="POST" id="subscribe">
+                    {% csrf_token %}
+                    <div class="thanks" style="display: none;">Подписка активирована</div>
+                    <div class="stay-left">
+                        <input type="email" placeholder="Оставьте свой email для получения новостей" name="email">
+                    </div>
+                    <input type="submit" value="отправить">
+                    <div class="errors" style="width: 100%;"></div>
+                </form>
                 <div class="clearfix"></div>
             </div>
         </div>
