--- a/frontend/templates/pages/home.html
+++ b/frontend/templates/pages/home.html
@@ -25,4 +25,18 @@
             </div>
         </div>
     </div>
+    <div class="special" {% if edit_mode %}style="z-index: 9999;"{% endif %}>
+        <div class="container">
+            <h3>{% component 'text.html' id='cards-title' %}</h3>
+            <div class="specia-top">
+                <ul class="grid_2">
+                    {% component 'card.html' id='card-a' %}
+                    {% component 'card.html' id='card-b' %}
+                    {% component 'card.html' id='card-c' %}
+                    {% component 'card.html' id='card-d' %}
+                    <div class="clearfix"></div>
+                </ul>
+            </div>
+        </div>
+    </div>
 {% endblock %}
