--- a/frontend/templates/core/base.html
+++ b/frontend/templates/core/base.html
@@ -25,16 +25,16 @@
             <div class="container">
                 <div class="header_top">
                     <div class="top_right">
-                        <ul>
+                        <!--<ul>
                             <li><a href="#">Контакты</a></li>|
                             <li><a href="#">Доставка и оплата</a></li>|
                             <li><a href="#">Время работы</a></li>
-                        </ul>
+                        </ul>-->
                     </div>
                     <div class="top_left">
-                        <h2><span></span>Телефон: {% component 'text.html' id='phone' %}</h2>
+                        <h2><span></span>{% component 'text.html' id='phone' %}</h2>
                     </div>
-                        <div class="clearfix"> </div>
+                    <div class="clearfix"></div>
                 </div>
             </div>
         </div>
@@ -53,7 +53,7 @@
         <script type="text/javascript" src="{% static 'js/megamenu.js' %}"></script>
         <script>$(document).ready(function(){$(".megamenu").megamenu();});</script>
         <script src="{% static 'js/menu_jquery.js' %}"></script>
-        <script src="{% static 'js/simple_cart.min.js' %}"> </script>
+        <!-- <script src="{% static 'js/simple_cart.min.js' %}"> </script> -->
         {% block javascript %}{% endblock %}
 
         {% include 'core/edit.html' %}
